--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".LoginScreen" />
-        <activity android:name=".ontouch"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".Quadrant"/>
+        <activity android:name=".Registration"></activity>
     </application>
 
 </manifest>
